--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ graphene==2.1.8
 graphene-django==2.10.1
 gunicorn==19.9.0
 ipython==7.2.0
+jedi==0.17.2 # remove after ipython gets fixed
 lxml==4.2.4
 mistune==0.8.3
 numpy==1.16.1
