--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ Babel==2.6.0
 bleach==3.0.2
 cachetools==2.1.0
 colored-traceback==0.3.0 # used for tests, but required my manage.py and therefore prod scripts
-Django==2.2.11
-django-extensions==2.1.5
+Django==3.1.6
+django-extensions==3.1.1
 djangorestframework==3.11.0
 rules==2.1
 django-otp==0.9.1
-django-session-security==2.6.5
+django-session-security==2.6.6
 django-simplemde==0.1.3
 django-template-block-args==0.0.5
 Faker==4.0.0
@@ -27,5 +27,6 @@ pytz==2018.5
 PyYAML==3.13
 qrcode==6.1
 reportlab==3.5.9
+six==1.15.0
 xhtml2pdf==0.2.3
 xlrd==1.2.0
