--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,11 @@ exclude = '''
   | migrations/.*_auto_.*.py 
 )
 '''
+
+[tool.isort]
+
+profile = "black"
+include_trailing_comma = true
+known_django = "django"
+known_graphene = "graphene"
+sections=[ "FUTURE", "STDLIB", "DJANGO", "GRAPHENE", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER" ]
