--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,7 @@
 # -- FILE: pytest.ini (or tox.ini)
 [pytest]
+DJANGO_SETTINGS_MODULE = django_sample.settings
 python_files = tests.py test_*.py *_tests.py
 norecursedirs = .git env venv
 addopts = -p no:warnings -s
+junit_family = xunit2 
