--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,7 +4,7 @@ coverage==5.1
 django-coverage-plugin==1.8.0
 django-debug-toolbar==3.2
 django-graphiql-debug-toolbar==0.1.4
-black==19.10b0
+black==22.3.0
 pylint==2.7.2
 pylint-django==2.4.2
 pdfrw==0.4
