--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-aiodataloader==0.2.0
 Babel==2.6.0
 bleach==3.0.2
 cachetools==2.1.0
 colored-traceback==0.3.0 # used for tests, but required my manage.py and therefore prod scripts
-Django==3.1.6
+Django==4.0.0
 django-extensions==3.1.1
 djangorestframework==3.11.0
 rules==2.1
@@ -12,8 +11,8 @@ django-session-security==2.6.6
 django-simplemde==0.1.3
 django-template-block-args==0.0.5
 Faker==4.0.0
-graphene==2.1.8
-graphene-django==2.10.1
+graphene==3.1.1
+graphene-django==3.0.0
 gunicorn==19.9.0
 ipython==7.2.0
 jedi==0.17.2 # remove after ipython gets fixed
@@ -27,3 +26,6 @@ qrcode==6.1
 six==1.15.0
 xhtml2pdf==0.2.3
 xlrd==1.2.0
+
+
+git+https://github.com/fellowapp/graphql-core-promise#egg=graphql_core_promise
