--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,9 @@ django-session-security==2.6.6
 django-simplemde==0.1.3
 django-template-block-args==0.0.5
 Faker==4.0.0
-graphene==3.1.1
+graphene==3.1.1     
 graphene-django==3.0.0
+graphql-core-promise==3.2.3.post1   
 gunicorn==19.9.0
 ipython==7.2.0
 jedi==0.17.2 # remove after ipython gets fixed
@@ -26,6 +27,3 @@ qrcode==6.1
 six==1.15.0
 xhtml2pdf==0.2.3
 xlrd==1.2.0
-
-
-git+https://github.com/fellowapp/graphql-core-promise#egg=graphql_core_promise
